# monorepo

./: .gitignore  .marginalia.org  .sops.yaml  Makefile  README.md  README.org  TODO.org  apps.nix  bootstrap.nix  configuration.nix  deploy.nix  deploy.sh  flake.nix  git-clone.sh  hardware-configuration.nix  home.nix  network.nix  overlay.nix  profile  result
blog/: emacs.org  software-architecture.org
bootstrap/: README.org  bootstrap.nix  flake-module.nix  install.nix
config/: bashrc  profile  tool-versions  user-dirs.dirs
emacs/: default.nix  init.el  module.nix  overlay.nix  tf-emacs.nix
emacs.d/: .gitignore  early-init.el  shell.nix
features/: default.nix
home/: alacritty.nix  bash.nix  files.nix  flake.nix  git.nix  home.nix  i3.nix  install-vscode-extensions.sh  picom.nix  polybar.nix  systemd.nix  vscode.nix
hosts/: README.org  default.nix  flake-module.nix  lib.nix
infrastructure/: .terraform.lock.hcl  cloud-server.tf  default.nix  dns.tf  flake-module.nix  local-file.nix  main.nix  main.tf  network.tftpl.nix  outputs.json  outputs.tf  searx.tf  server.tf  vtr.tf  zone.tf
keys/: default.nix  inspiron.pub.asc
lib/: default.nix  home.nix  hosts.nix  machines.nix  modules.nix
machines/: .terraform.lock.hcl  README.org  default.nix  lib.nix  (+4 more)
references/projects/test-suites/: flake.nix  pyproject.toml  requirements.txt
references/projects/test-suites/examples/: basics.py
references/projects/test-suites/src/examples/: basics.py
references/projects/test-suites/src/tests/: test_basics.py
templates/jupyter/kernels/python/: pyproject.toml
(+3406 files in other folders)
