[tool.pytest.ini_options]
pythonpath = "src/"

[tool.poetry]
name = "suites"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
dbt-core = "^1.3.1"
pandas = "^1.5.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mutmut = "^2.4.2"
pytest = "^7.2.0"
mypy = "^0.990"
refurb = "^1.7.0"
hypothesis = "^6.58.0"
python-language-server = "^0.36.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
