[tool.poetry]
name = "jupyter-nix-kernel-ipython"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
altair = "^4.2.0"
ipykernel = "^6.19.2"
keras = "^2.11.0"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
pandas = "^1.5.2"
plotly = "^5.11.0"
pydantic = "^1.10.2"
scikit-learn = "^1.2.0"
scipy = "^1.9.3"
seaborn = "^0.12.1"
shap = "^0.41.0"
statsmodels = "^0.13.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
